[gd_scene load_steps=2 format=3 uid="uid://dbt6pqst36dlq"]

[ext_resource type="Script" uid="uid://b0p1ygkdpwl7j" path="res://scenes/Combate/QUIZ/questionario_quiz.gd" id="1_6atvc"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6atvc")

[node name="Pergunta" type="Label" parent="."]
layout_mode = 0
offset_left = 477.0
offset_top = 9.0
offset_right = 682.0
offset_bottom = 48.0

[node name="Resultado" type="Label" parent="."]
layout_mode = 0
offset_left = 554.0
offset_top = 502.0
offset_right = 594.0
offset_bottom = 525.0

[node name="Turno" type="Label" parent="."]
layout_mode = 0
offset_left = 545.0
offset_top = 68.0
offset_right = 585.0
offset_bottom = 91.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="BotaoA" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="BotaoB" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="BotaoC" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="BotaoD" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Voltar" type="Button" parent="."]
offset_left = 2.0
offset_top = 4.0
offset_right = 88.0
offset_bottom = 54.0
text = "Voltar"

[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
